[gd_scene load_steps=18 format=3 uid="uid://cbbw0ytomxkly"]

[ext_resource type="Script" path="res://Scripts/new_difficulty.gd" id="1_utpel"]
[ext_resource type="FontFile" uid="uid://dji5p2gcapptw" path="res://Assets/UI/NewyearCoffee-4nd2D.ttf" id="2_xhjfu"]
[ext_resource type="StyleBox" uid="uid://cdks4l1c2vhtw" path="res://Assets/UI/panel_info.tres" id="3_e6lt8"]
[ext_resource type="AudioStream" uid="uid://tejb4bspjmme" path="res://Assets/Music/M.MP3" id="4_10gbt"]
[ext_resource type="StyleBox" uid="uid://ry4swhay83jf" path="res://Assets/UI/menu_hover_green.tres" id="4_y0w4n"]
[ext_resource type="AudioStream" uid="uid://by52yorlkoepd" path="res://Assets/Music/D.MP3" id="5_4de0x"]
[ext_resource type="StyleBox" uid="uid://cym167tr1k6t0" path="res://Assets/UI/menu_green.tres" id="5_p8w2g"]
[ext_resource type="AudioStream" uid="uid://cptms4qpuvuw5" path="res://Assets/Music/F.MP3" id="6_royei"]
[ext_resource type="Texture2D" uid="uid://7lyq115d0rkf" path="res://Assets/UI/cancel75.png" id="6_vvgdi"]
[ext_resource type="AudioStream" uid="uid://vgsr7yxcqj11" path="res://Assets/Music/T.MP3" id="7_ahh4a"]
[ext_resource type="StyleBox" uid="uid://bunu7gyd0flm5" path="res://Assets/UI/menu_hover_red.tres" id="7_y44yp"]
[ext_resource type="AudioStream" uid="uid://cjdrmuqrn8u3j" path="res://Assets/Music/R.MP3" id="8_3lvee"]
[ext_resource type="StyleBox" uid="uid://ovt2sr7ttmqp" path="res://Assets/UI/menu_red.tres" id="8_thomx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbtv7"]
bg_color = Color(0.258824, 0.443137, 0.482353, 0.647059)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfqpv"]
bg_color = Color(0, 0.119285, 0.0347667, 0.564706)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1ben"]
bg_color = Color(0, 0.447059, 0.207843, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1.44392e-07, 0.447736, 0.207592, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_howlc"]
bg_color = Color(0.628989, 1, 0.720859, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Difficulty" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(419, 0)
offset = Vector2(540, 0)

[node name="New" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -419.0
offset_top = -538.0
offset_right = 1501.0
offset_bottom = 542.0
script = ExtResource("1_utpel")

[node name="Panel2" type="Panel" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qbtv7")

[node name="Panel" type="Panel" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -425.0
offset_right = 800.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jfqpv")

[node name="List" type="VBoxContainer" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -725.0
offset_top = 235.0
offset_right = -425.0
offset_bottom = -329.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="Label" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = " Productivity: "
horizontal_alignment = 2

[node name="Prod" type="HSlider" parent="Camera2D/New/List/Label"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
min_value = 0.1
max_value = 1.9
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Pricing: "
horizontal_alignment = 2

[node name="Price" type="HSlider" parent="Camera2D/New/List/Label2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
min_value = 0.1
max_value = 1.9
step = 0.05
value = 1.0

[node name="Label3" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Sales: "
horizontal_alignment = 2

[node name="Sales" type="HSlider" parent="Camera2D/New/List/Label3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
min_value = 0.1
max_value = 1.9
step = 0.05
value = 1.0

[node name="Label4" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Fans: "
horizontal_alignment = 2

[node name="Fans" type="HSlider" parent="Camera2D/New/List/Label4"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
min_value = 0.1
max_value = 1.9
step = 0.05
value = 1.0

[node name="Label5" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = " Rent + payroll: "
horizontal_alignment = 2

[node name="Exp" type="HSlider" parent="Camera2D/New/List/Label5"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
min_value = 0.1
max_value = 1.9
step = 0.05
value = 1.0

[node name="Label6" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Publishers: "
horizontal_alignment = 2

[node name="Pub" type="HSlider" parent="Camera2D/New/List/Label6"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
max_value = 1.0
value = 1.0

[node name="Label7" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Research: "
horizontal_alignment = 2

[node name="Res" type="HSlider" parent="Camera2D/New/List/Label7"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
max_value = 1.0
value = 1.0

[node name="Label8" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Contracts: "
horizontal_alignment = 2

[node name="Cont" type="HSlider" parent="Camera2D/New/List/Label8"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
max_value = 1.0
value = 1.0

[node name="Label9" type="Label" parent="Camera2D/New/List"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Loans + Stocks: "
horizontal_alignment = 2

[node name="Loans" type="HSlider" parent="Camera2D/New/List/Label9"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -8.0
offset_right = 1025.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_s1ben")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_howlc")
max_value = 1.0
value = 1.0

[node name="Values" type="VBoxContainer" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 610.5
offset_top = 235.0
offset_right = 711.5
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 17

[node name="ProdVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "1
"
horizontal_alignment = 1

[node name="PriceVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "1
"
horizontal_alignment = 1

[node name="SalesVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "1
"
horizontal_alignment = 1

[node name="FansVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "1
"
horizontal_alignment = 1

[node name="ExpVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "1
"
horizontal_alignment = 1

[node name="PubVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "on
"
horizontal_alignment = 1

[node name="ReVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "on
"
horizontal_alignment = 1

[node name="ContVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "on
"
horizontal_alignment = 1

[node name="LoanVal" type="Label" parent="Camera2D/New/Values"]
layout_mode = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "on"
horizontal_alignment = 1

[node name="Header" type="Label" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -374.5
offset_top = 155.0
offset_right = 463.5
offset_bottom = 224.0
grow_horizontal = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "Difficulty Customisation:"
horizontal_alignment = 1

[node name="Explain" type="Label" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 431.5
offset_top = 754.0
offset_right = 712.5
offset_bottom = 947.0
grow_horizontal = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_e6lt8")
text = "values:  
1 = Default
0.1 = Hardest
1.9 = Easiest"
horizontal_alignment = 2

[node name="PLAY" type="Button" parent="Camera2D/New"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -724.5
offset_top = -329.0
offset_right = 404.5
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 155
theme_override_styles/disabled_mirrored = ExtResource("4_y0w4n")
theme_override_styles/disabled = ExtResource("4_y0w4n")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_y0w4n")
theme_override_styles/hover_pressed = ExtResource("4_y0w4n")
theme_override_styles/hover_mirrored = ExtResource("4_y0w4n")
theme_override_styles/hover = ExtResource("4_y0w4n")
theme_override_styles/pressed_mirrored = ExtResource("4_y0w4n")
theme_override_styles/pressed = ExtResource("4_y0w4n")
theme_override_styles/normal_mirrored = ExtResource("5_p8w2g")
theme_override_styles/normal = ExtResource("5_p8w2g")
text = "Next"

[node name="Main Menu" type="Button" parent="Camera2D/New"]
layout_mode = 1
offset_left = 17.0
offset_top = 17.0
offset_right = 518.0
offset_bottom = 107.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xhjfu")
theme_override_font_sizes/font_size = 70
theme_override_icons/icon = ExtResource("6_vvgdi")
theme_override_styles/disabled_mirrored = ExtResource("7_y44yp")
theme_override_styles/disabled = ExtResource("7_y44yp")
theme_override_styles/hover_pressed_mirrored = ExtResource("7_y44yp")
theme_override_styles/hover_pressed = ExtResource("7_y44yp")
theme_override_styles/hover_mirrored = ExtResource("7_y44yp")
theme_override_styles/hover = ExtResource("7_y44yp")
theme_override_styles/pressed_mirrored = ExtResource("7_y44yp")
theme_override_styles/pressed = ExtResource("7_y44yp")
theme_override_styles/normal_mirrored = ExtResource("8_thomx")
theme_override_styles/normal = ExtResource("8_thomx")
text = "Main Menu"

[node name="Sounds" type="Node2D" parent="."]
position = Vector2(-730.184, -348.017)

[node name="Mouse" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_10gbt")
volume_db = 1.0
bus = &"SFX"

[node name="Dullmouse" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("5_4de0x")
volume_db = 5.5
bus = &"SFX"

[node name="Filmic" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_royei")
bus = &"SFX"

[node name="Techno" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_ahh4a")
bus = &"SFX"

[node name="Retro" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_3lvee")
volume_db = -3.0
bus = &"SFX"

[connection signal="value_changed" from="Camera2D/New/List/Label/Prod" to="Camera2D/New" method="_on_prod_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label2/Price" to="Camera2D/New" method="_on_price_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label3/Sales" to="Camera2D/New" method="_on_sales_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label4/Fans" to="Camera2D/New" method="_on_fans_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label5/Exp" to="Camera2D/New" method="_on_exp_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label6/Pub" to="Camera2D/New" method="_on_pub_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label7/Res" to="Camera2D/New" method="_on_res_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label8/Cont" to="Camera2D/New" method="_on_cont_value_changed"]
[connection signal="value_changed" from="Camera2D/New/List/Label9/Loans" to="Camera2D/New" method="_on_loans_value_changed"]
[connection signal="pressed" from="Camera2D/New/PLAY" to="Camera2D/New" method="_on_play_pressed"]
[connection signal="pressed" from="Camera2D/New/Main Menu" to="Camera2D/New" method="_on_main_menu_pressed"]
